--- a/.github/workflows/radartips_update_data_api_football.yml
+++ b/.github/workflows/radartips_update_data_api_football.yml
@@ -1,10 +1,10 @@
 name: Update RadarTips data (API-FOOTBALL)
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: {}
   schedule:
-    - cron: "5 12 * * *"
-    - cron: "5 0 * * *"
+    # 08:10 BRT (UTC-3) ~= 11:10 UTC
+    - cron: "10 11 * * *"
 
 permissions:
   contents: write
