--- a/.github/workflows/radartips_update_data_api_football.yml
+++ b/.github/workflows/radartips_update_data_api_football.yml
@@ -41,6 +41,7 @@ jobs:
           fi
 
       - name: Commit & push if changed (fallback)
+        if:false
         run: |
           if [[ "$UPLOADED_R2" == "1" ]]; then
             echo "Snapshots uploaded to R2; skipping commit to avoid Pages rebuild."
