--- a/.github/workflows/radartips_update_data_api_football.yml
+++ b/.github/workflows/radartips_update_data_api_football.yml
@@ -28,53 +28,4 @@ jobs:
 
       - name: Upload snapshots to R2 (optional, no rebuild)
         env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          R2_BUCKET_NAME: ${{ secrets.R2_BUCKET_NAME }}
-        run: |
-          set -e
-
-          if [[ -n "$CLOUDFLARE_API_TOKEN" && -n "$CLOUDFLARE_ACCOUNT_ID" && -n "$R2_BUCKET_NAME" ]]; then
-            npm i -g wrangler@4
-
-            # Diagnóstico útil (não vaza segredo)
-            wrangler --version
-            wrangler r2 bucket list
-
-            # Garante que os arquivos existem antes de tentar upload
-            test -f data/v1/calendar_7d.json
-            test -f data/v1/radar_day.json
-
-            # Upload (bucket/key)
-            wrangler r2 object put "${R2_BUCKET_NAME}/v1/calendar_7d.json" \
-              --file data/v1/calendar_7d.json \
-              --content-type application/json
-
-            wrangler r2 object put "${R2_BUCKET_NAME}/v1/radar_day.json" \
-              --file data/v1/radar_day.json \
-              --content-type application/json
-
-            echo "UPLOADED_R2=1" >> "$GITHUB_ENV"
-          else
-            echo "Skipping R2 upload (missing Cloudflare secrets)."
-          fi
-
-      - name: Commit & push if changed (fallback)
-        if: ${{ false }}
-        run: |
-          set -e
-
-          if [[ "$UPLOADED_R2" == "1" ]]; then
-            echo "Snapshots uploaded to R2; skipping commit to avoid Pages rebuild."
-            exit 0
-          fi
-
-          if [[ -n "$(git status --porcelain)" ]]; then
-            git config user.name "radartips-bot"
-            git config user.email "radartips-bot@users.noreply.github.com"
-            git add data/v1/*.json
-            git commit -m "data: update radar (api-football)"
-            git push
-          else
-            echo "No changes to commit."
-          fi
+          CLOUDFL
