--- a/.github/workflows/radartips_update_data_api_football.yml
+++ b/.github/workflows/radartips_update_data_api_football.yml
@@ -3,7 +3,6 @@ name: Update RadarTips data (API-FOOTBALL)
 on:
   workflow_dispatch: {}
   schedule:
-    # 08:10 BRT (UTC-3) ~= 11:10 UTC
     - cron: "10 11 * * *"
 
 permissions:
@@ -12,13 +11,10 @@ permissions:
 jobs:
   build-data:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
 
@@ -27,4 +23,38 @@ jobs:
           APIFOOTBALL_KEY: ${{ secrets.APIFOOTBALL_KEY }}
         run: |
           set -e
-          node tools/update-data-api-football.mjs
+          node tools/update-data-api-football.mjs --mode=daily
+
+      - name: Upload snapshots to R2 (optional, no rebuild)
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          R2_BUCKET_NAME: ${{ secrets.R2_BUCKET_NAME }}
+        run: |
+          set -e
+
+          if [[ -n "$CLOUDFLARE_API_TOKEN" && -n "$CLOUDFLARE_ACCOUNT_ID" && -n "$R2_BUCKET_NAME" ]]; then
+            npm i -g wrangler@4
+
+            wrangler --version
+            wrangler r2 bucket list --remote
+
+            test -f data/v1/calendar_7d.json
+            test -f data/v1/radar_day.json
+
+            wrangler r2 object put "${R2_BUCKET_NAME}/v1/calendar_7d.json" \
+              --file data/v1/calendar_7d.json \
+              --content-type application/json \
+              --remote
+
+            wrangler r2 object put "${R2_BUCKET_NAME}/v1/radar_day.json" \
+              --file data/v1/radar_day.json \
+              --content-type application/json \
+              --remote
+
+            wrangler r2 object list "${R2_BUCKET_NAME}" --prefix "v1/" --remote
+
+            echo "UPLOADED_R2=1" >> "$GITHUB_ENV"
+          else
+            echo "Skipping R2 upload (missing Cloudflare secrets)."
+          fi
