--- a/.github/workflows/radartips_update_data_api_football.yml
+++ b/.github/workflows/radartips_update_data_api_football.yml
@@ -27,34 +27,4 @@ jobs:
 
       - name: Upload snapshots to R2 (optional, no rebuild)
         env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          R2_BUCKET_NAME: ${{ secrets.R2_BUCKET_NAME }}
-        run: |
-          set -e
-
-          if [[ -n "$CLOUDFLARE_API_TOKEN" && -n "$CLOUDFLARE_ACCOUNT_ID" && -n "$R2_BUCKET_NAME" ]]; then
-            npm i -g wrangler@4
-
-            wrangler --version
-            wrangler r2 bucket list --remote
-
-            test -f data/v1/calendar_7d.json
-            test -f data/v1/radar_day.json
-
-            wrangler r2 object put "${R2_BUCKET_NAME}/v1/calendar_7d.json" \
-              --file data/v1/calendar_7d.json \
-              --content-type application/json \
-              --remote
-
-            wrangler r2 object put "${R2_BUCKET_NAME}/v1/radar_day.json" \
-              --file data/v1/radar_day.json \
-              --content-type application/json \
-              --remote
-
-            wrangler r2 object list "${R2_BUCKET_NAME}" --prefix "v1/" --remote
-
-            echo "UPLOADED_R2=1" >> "$GITHUB_ENV"
-          else
-            echo "Skipping R2 upload (missing Cloudflare secrets)."
-          fi
+          CLOUDFLARE_API_TOK
