--- a/.github/workflows/radartips_update_data_api_football.yml
+++ b/.github/workflows/radartips_update_data_api_football.yml
@@ -8,14 +8,11 @@ on:
 permissions:
   contents: write
 
-# Evita duas execuções ao mesmo tempo (e uploads concorrentes no R2)
 concurrency:
   group: radartips-data-daily
   cancel-in-progress: true
 
 env:
-  # 0 = não comita (evita rebuild do Pages)
-  # 1 = comita se o upload ao R2 não acontecer
   COMMIT_FALLBACK: "0"
 
 jobs:
@@ -32,10 +29,10 @@ jobs:
         env:
           APIFOOTBALL_KEY: ${{ secrets.APIFOOTBALL_KEY }}
         run: |
-          set -e
+          set -euo pipefail
           node tools/update-data-api-football.mjs --mode=daily
 
-      - name: Upload snapshots to R2 (optional, no rebuild)
+      - name: Upload snapshots to R2 (remote, no rebuild)
         shell: bash
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
@@ -54,35 +51,38 @@ jobs:
             exit 0
           fi
 
-          # Wrangler v4 (fixa a versão para não mudar o comportamento de um dia pro outro)
           npm i -g wrangler@4
           wrangler --version
 
-          # Garante que os arquivos existem
           test -f "data/v1/calendar_7d.json"
           test -f "data/v1/radar_day.json"
 
-          # Upload (bucket/key)
-          # Importante: não usar --account-id aqui; o Wrangler usa CLOUDFLARE_ACCOUNT_ID via env.
-          wrangler r2 object put "${R2_BUCKET_NAME}/v1/calendar_7d.json" \
+          echo "=== UPLOAD TO REAL R2 (REMOTE) ==="
+          wrangler r2 object put --remote "${R2_BUCKET_NAME}/v1/calendar_7d.json" \
             --file "data/v1/calendar_7d.json" \
             --content-type "application/json"
 
-          wrangler r2 object put "${R2_BUCKET_NAME}/v1/radar_day.json" \
+          wrangler r2 object put --remote "${R2_BUCKET_NAME}/v1/radar_day.json" \
             --file "data/v1/radar_day.json" \
             --content-type "application/json"
 
+          echo "=== VERIFY ON REAL R2 (REMOTE GET) ==="
+          rm -f /tmp/calendar_7d.json /tmp/radar_day.json
+          wrangler r2 object get --remote "${R2_BUCKET_NAME}/v1/calendar_7d.json" --file "/tmp/calendar_7d.json"
+          wrangler r2 object get --remote "${R2_BUCKET_NAME}/v1/radar_day.json"  --file "/tmp/radar_day.json"
+
+          echo "OK: bytes baixados do R2 real:"
+          wc -c /tmp/calendar_7d.json /tmp/radar_day.json
+
           echo "UPLOADED_R2=1" >> "$GITHUB_ENV"
-          echo "Uploaded to R2 OK."
 
       - name: Commit & push if changed (fallback)
         if: ${{ env.COMMIT_FALLBACK == '1' }}
         shell: bash
         run: |
           set -euo pipefail
-
           if [[ "${UPLOADED_R2:-0}" == "1" ]]; then
-            echo "Snapshots uploaded to R2; skipping commit to avoid Pages rebuild."
+            echo "Uploaded to R2; skipping commit to avoid Pages rebuild."
             exit 0
           fi
 
