--- a/.github/workflows/radartips_update_data_api_football.yml
+++ b/.github/workflows/radartips_update_data_api_football.yml
@@ -48,41 +48,30 @@ jobs:
             exit 0
           fi
 
-          # Fixa a versão para não mudar comportamento do nada
+          # Fixa a versão (evita mudanças de CLI do nada)
           npm i -g wrangler@4.62.0
           wrangler --version
 
-          echo "=== CHECK FILES ==="
-          ls -la data/v1 || true
+          # Garante que os arquivos existem
           test -f "data/v1/calendar_7d.json"
           test -f "data/v1/radar_day.json"
 
-          echo "=== UPLOAD (REMOTE) ==="
-          # Mantém o --remote no comando (e também no fim), para evitar cair em "local"
-          wrangler r2 object put --remote "${R2_BUCKET_NAME}/v1/calendar_7d.json" \
-            --file "data/v1/calendar_7d.json" \
-            --content-type "application/json" \
-            --remote
+          echo "=== Upload R2 (REMOTE) ==="
+          # Wrangler v4: --remote precisa vir ANTES do objectPath
+          wrangler r2 object put --remote "${R2_BUCKET_NAME}/v1/calendar_7d.json"             --file "data/v1/calendar_7d.json"             --content-type "application/json"
 
-          wrangler r2 object put --remote "${R2_BUCKET_NAME}/v1/radar_day.json" \
-            --file "data/v1/radar_day.json" \
-            --content-type "application/json" \
-            --remote
+          wrangler r2 object put --remote "${R2_BUCKET_NAME}/v1/radar_day.json"             --file "data/v1/radar_day.json"             --content-type "application/json"
 
-          echo "=== VERIFY (REMOTE GET + CHECKSUM) ==="
-          wrangler r2 object get --remote "${R2_BUCKET_NAME}/v1/calendar_7d.json" \
-            --file "/tmp/r2_calendar_7d.json" \
-            --remote
-
-          wrangler r2 object get --remote "${R2_BUCKET_NAME}/v1/radar_day.json" \
-            --file "/tmp/r2_radar_day.json" \
-            --remote
+          echo "=== Verify (REMOTE GET + sha256) ==="
+          wrangler r2 object get --remote "${R2_BUCKET_NAME}/v1/calendar_7d.json" --file "/tmp/r2_calendar_7d.json"
+          wrangler r2 object get --remote "${R2_BUCKET_NAME}/v1/radar_day.json"  --file "/tmp/r2_radar_day.json"
 
           echo "--- sha256 local vs remoto (devem bater) ---"
           sha256sum "data/v1/calendar_7d.json" "/tmp/r2_calendar_7d.json"
           sha256sum "data/v1/radar_day.json"  "/tmp/r2_radar_day.json"
 
           echo "UPLOADED_R2=1" >> "$GITHUB_ENV"
+          echo "Uploaded to R2 OK."
 
       - name: Commit & push if changed (fallback)
         if: ${{ env.COMMIT_FALLBACK == '1' }}
@@ -96,4 +85,11 @@ jobs:
           fi
 
           if [[ -n "$(git status --porcelain)" ]]; then
-            git config user.name
+            git config user.name "radartips-bot"
+            git config user.email "radartips-bot@users.noreply.github.com"
+            git add data/v1/*.json
+            git commit -m "data: update radar (api-football)"
+            git push
+          else
+            echo "No changes to commit."
+          fi
