--- a/.github/workflows/radartips_update_data_api_football.yml
+++ b/.github/workflows/radartips_update_data_api_football.yml
@@ -12,11 +12,6 @@ concurrency:
   group: radartips-data-daily
   cancel-in-progress: true
 
-env:
-  # 0 = não comita (evita rebuild do Pages)
-  # 1 = comita se o upload ao R2 não acontecer
-  COMMIT_FALLBACK: "0"
-
 jobs:
   build-data:
     runs-on: ubuntu-latest
@@ -48,48 +43,26 @@ jobs:
             exit 0
           fi
 
-          # Fixa a versão (evita mudanças de CLI do nada)
           npm i -g wrangler@4.62.0
           wrangler --version
 
-          # Garante que os arquivos existem
           test -f "data/v1/calendar_7d.json"
           test -f "data/v1/radar_day.json"
 
-          echo "=== Upload R2 (REMOTE) ==="
-          # Wrangler v4: --remote precisa vir ANTES do objectPath
-          wrangler r2 object put --remote "${R2_BUCKET_NAME}/v1/calendar_7d.json"             --file "data/v1/calendar_7d.json"             --content-type "application/json"
+          echo "=== PUT (REMOTE) ==="
+          wrangler r2 object put --remote "${R2_BUCKET_NAME}/v1/calendar_7d.json" \
+            --file "data/v1/calendar_7d.json" \
+            --content-type "application/json"
 
-          wrangler r2 object put --remote "${R2_BUCKET_NAME}/v1/radar_day.json"             --file "data/v1/radar_day.json"             --content-type "application/json"
+          wrangler r2 object put --remote "${R2_BUCKET_NAME}/v1/radar_day.json" \
+            --file "data/v1/radar_day.json" \
+            --content-type "application/json"
 
-          echo "=== Verify (REMOTE GET + sha256) ==="
+          echo "=== GET (REMOTE) + SHA256 (deve bater) ==="
           wrangler r2 object get --remote "${R2_BUCKET_NAME}/v1/calendar_7d.json" --file "/tmp/r2_calendar_7d.json"
           wrangler r2 object get --remote "${R2_BUCKET_NAME}/v1/radar_day.json"  --file "/tmp/r2_radar_day.json"
 
-          echo "--- sha256 local vs remoto (devem bater) ---"
           sha256sum "data/v1/calendar_7d.json" "/tmp/r2_calendar_7d.json"
           sha256sum "data/v1/radar_day.json"  "/tmp/r2_radar_day.json"
 
-          echo "UPLOADED_R2=1" >> "$GITHUB_ENV"
           echo "Uploaded to R2 OK."
-
-      - name: Commit & push if changed (fallback)
-        if: ${{ env.COMMIT_FALLBACK == '1' }}
-        shell: bash
-        run: |
-          set -euo pipefail
-
-          if [[ "${UPLOADED_R2:-0}" == "1" ]]; then
-            echo "Snapshots uploaded to R2; skipping commit to avoid Pages rebuild."
-            exit 0
-          fi
-
-          if [[ -n "$(git status --porcelain)" ]]; then
-            git config user.name "radartips-bot"
-            git config user.email "radartips-bot@users.noreply.github.com"
-            git add data/v1/*.json
-            git commit -m "data: update radar (api-football)"
-            git push
-          else
-            echo "No changes to commit."
-          fi
