tomara que de certo

--- a/workers/radartips-api/wrangler.toml
+++ b/workers/radartips-api/wrangler.toml
@@ -1,21 +1,10 @@
 name = "radartips-api"
-main = "src/index.js"
+main = "src/index.js" # ou src/index.ts / src/worker.js (use o que seu projeto usa)
 compatibility_date = "2026-02-03"
 
 [triggers]
-crons = ["* * * * *", "*/10 * * * *"]
-
-[vars]
-# Required: API-Football key (ApiSports)
-
-
-# Data snapshot version prefix inside the R2 bucket
-V1_PREFIX = "v1"
+crons = ["* * * * *"]
 
 [[kv_namespaces]]
-binding = "RADARTIPS_LIVE"
+binding = "RADAR_LIVE"
 id = "7985bdade9df416690cfd0226ebd78d2"
-
-[[r2_buckets]]
-binding = "R2"
-bucket_name = "radartips-data"
